--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -22,14 +22,28 @@
   ~ SOFTWARE.
   -->
 
-<resources xmlns:xliff="http://schemas.android.com/apk/res/android" xmlns:ns2="http://schemas.android.com/tools">
+<resources xmlns:ns0="urn:oasis:names:tc:xliff:document:1.2" xmlns:xliff="http://schemas.android.com/apk/res/android">
     <string name="app_name">اتصال پنج نقطه</string>
     <string name="language">فارسی</string>
-
-
     <string name="greetings">"سلام <xliff:g id="USER_NAME">%1$s</xliff:g>!"</string>
-    <string name="android">اندروید</string>
-    <string name="how_to_title">یادگیری بازی</string>
+    <string name="scores_title">منابع</string>
+    <string name="scores_moves">تعداد جابه جایی</string>
+    <string name="scores_won">برنده</string>
+    <string name="scores_lost">بازنده</string>
+    <string name="end_win">شما برنده هستید!</string>
+    <string name="end_lose">شما باخته اید!</string>
+    <string name="menu_single_player">بازی انفرادی</string>
+    <string name="menu_multi_player">بازی دو فرد</string>
+    <string name="menu_two_players">دو نفر</string>
+    <string name="menu_local_network">شبکه ی محلی</string>
+    <string name="menu_online_game">اینترنت</string>
+    <string name="settings_dots">"نقطه ها"</string>
+    <string name="rate_this_app">امتیاز بدهید به بازی</string>
+    <string name="bluetooth_not_discoverable">"دستگاه قابل شناسایی شود"</string>
+    <string name="bt_message_your_turn">…نوبت شماست. نقطه بگذارید </string>
+    <string name="bt_message_opponents_turn">…صبر کنید. نوبت حریف</string>
+
+
     <string name="how_to_text">
         \t
         شما باید اولین نفری باشید که پنج نقطه در یک راستا به صورت افقی یا عمودی و یا قطری می سازد. یازی اندروید با نقاط ابی بازی می کند و شما با نقاط قرمز بازی خواهید کرد. نقاط قرمز و ابی به نوبت در خط تقاطع قرار داده می شوند. اولین نوبت از ان شماست.
@@ -43,79 +57,58 @@
         با انتخاب دکمه ی جستجو می توانید پنهان یا پیدا شدن پیکان را برای حرکت اخر نمایش دهید.
     </string>
 
-    <string name="scores_title">منابع</string>
-    <string name="scores_no_internet">اینترنت قطع شده است</string>
-    <string name="scores_number">#</string>
-    <string name="scores_name">نام</string>
-    <string name="scores_moves">تعداد جابه جایی</string>
-    <string name="scores_status">وضعیت</string>
-    <string name="scores_won">برنده</string>
-    <string name="scores_lost">بازنده</string>
-
-    <string name="end_win">شما برنده هستید!</string>
-    <string name="end_lose">شما باخته اید!</string>
-    <string name="end_new_game">جدید</string>
-    <string name="end_undo">بازگشت</string>
-    <string name="end_move">" <ns2:g id="MOVES">%1$d</ns2:g> حرکت انجام شده است در <ns2:g id="TIME">%2$s</ns2:g>"</string>
-
-    <string name="scores_time">زمان</string>
-    <string name="end_publish">نشر</string>
-
-    <string name="scores_loading">…در حال بار گذاری </string>
-
-    <string name="menu_single_player">بازی انفرادی</string>
-    <string name="menu_multi_player">بازی دو فرد</string>
-    <string name="menu_two_players">دو نفر</string>
-    <string name="menu_local_network">شبکه ی محلی</string>
-    <string name="menu_online_game">اینترنت</string>
-
-    <string name="settings_vibration">لرزش</string>
-    <string name="settings_night_mode">حالت شب</string>
-    <string name="settings_auto">"خودکار"</string>
-    <string name="settings_system">"سیستم"</string>
-    <string name="settings_dots">"نقطه ها"</string>
-    <string name="settings_reset">"پاک کردن همه موارد"</string>
-    <string name="rate_this_app">امتیاز بدهید به بازی</string>
 
     <string name="yes">"بله"</string>
-    <string name="no">"خیر"</string>
+    <string name="no">"نه"</string>
     <string name="create">"ایجاد"</string>
-    <string name="delete">"حذف"</string>
-    <string name="scan">"اسکن"</string>
-    <string name="searching">"در حال جستجو…"</string>
-    <string name="device_info_default">"ناشناس"</string>
-
-    <string name="switch_on_text">"روشن"</string>
-    <string name="switch_off_text">"خاموش"</string>
-
-    <string name="bluetooth_not_discoverable">"دستگاه قابل شناسایی شود"</string>
-    <string name="bluetooth_is_discoverable">"قابل مشاهده برای تمام دستگاه‌های بلوتوث اطراف (<xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g>)"</string>
+    <string name="unknown">"ناشناس"</string>
+    <string name="settings_system">"سیستم"</string>
+    <string name="disconnected">"اتصال قطع شد"</string>
+    <string name="bluetooth">"بلوتوث"</string>
+    <string name="bluetooth_is_discoverable">"قابل مشاهده برای تمام دستگاه‌های بلوتوث اطراف (<ns0:g id="DISCOVERABLE_TIME_PERIOD">%1$s</ns0:g>)"</string>
     <string name="bluetooth_only_visible_to_paired_devices">"فقط برای دستگاه‌های مرتبط شده قابل مشاهده است"</string>
-    <string name="bt_is_disconnect_question">"ارتباط <xliff:g id="DEVICE_NAME">%1$s</xliff:g> قطع شود؟"</string>
-    <string name="bluetooth_connected">"متصل"</string>
-    <string name="bluetooth_disconnected">"اتصال قطع شد"</string>
-    <string name="bluetooth_connecting">"در حال اتصال…"</string>
-    <string name="bluetooth_no_devices_found">"هیچ دستگاه بلوتوثی در این اطراف پیدا نشد."</string>
-    <string name="bluetooth_connection_dialog_text">"آیا می‌خواهید به \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\" وصل شوید؟"</string>
+    <string name="is_disconnect_question">"ارتباط <ns0:g id="DEVICE_NAME">%1$s</ns0:g> قطع شود؟"</string>
+    <string name="connection_dialog_text">"آیا می‌خواهید به \"<ns0:g id="DEVICE_NAME">%1$s</ns0:g>\" وصل شوید؟"</string>
     <string name="cancel">"لغو"</string>
     <string name="okay">"تأیید"</string>
-    <string name="settings_label">"تنظیمات"</string>
-    <string name="bluetooth_settings">"بلوتوث"</string>
-    <string name="bluetooth_connecting_error_message">"اتصال به <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ممکن نیست."</string>
-    <string name="apn_not_set">"تنظیم نشده است"</string>
-    <string name="apn_name">"نام"</string>
-    <string name="apn_user">"نام کاربری"</string>
+    <string name="time">"زمان"</string>
+    <string name="connecting_error_message">"اتصال به <ns0:g id="DEVICE_NAME">%1$s</ns0:g> ممکن نیست."</string>
+    <string name="searching">"در حال جستجو…"</string>
+    <string name="connect_failed">"متصل نشد. دوباره امتحان کنید."</string>
+    <string name="connected">"متصل"</string>
+    <string name="scan">"اسکن"</string>
+    <string name="status">"وضعیت"</string>
+    <string name="search">"جستجو"</string>
+    <string name="search_no_results">"نتیجه‌ای پیدا نشد"</string>
+    <string name="settings_night_mode">"نور شب"</string>
+    <string name="name_not_set">"تنظیم نشده است"</string>
+    <string name="name">"نام"</string>
+    <string name="settings_delete_all">"پاک کردن همه موارد"</string>
+    <string name="progress_text">"لطفاً صبر کنید…"</string>
+    <string name="help">"راهنمایی"</string>
+    <string name="loading">"در حال بارگیری…"</string>
     <string name="application_info_label">"اطلاعات برنامه"</string>
-    <string name="master_clear_progress_text">"لطفاً صبر کنید…"</string>
-    <string name="version_text">"نسخه <xliff:g id="VERSION_NUM">%1$s</xliff:g>"</string>
-    <string name="device_feedback">"ارسال بازخورد درباره این دستگاه"</string>
-    <string name="phone_language">"زبان"</string>
-    <string name="share">"به اشتراک بگذارید"</string>
-    <string name="search_menu">"جستجو"</string>
-    <string name="search_settings_no_results">"نتیجه‌ای پیدا نشد"</string>
-    <string name="disabled_low_ram_device">"این ویدیو در این دستگاه دردسترس نیست."</string>
-
-
-    <string name="bt_message_your_turn">…نوبت شماست. نقطه بگذارید </string>
-    <string name="bt_message_opponents_turn">…صبر کنید. نوبت حریف</string>
+    <string name="version_text">"نسخه <ns0:g id="VERSION_NUM">%1$s</ns0:g>"</string>
+    <string name="settings_language">"زبان‌ها"</string>
+    <string name="settings_auto">"خودکار"</string>
+    <string name="settings">"تنظیمات"</string>
+    <string name="duration">"مدت"</string>
+    <string name="connecting">"در حال اتصال…"</string>
+    <string name="delete">"حذف"</string>
+    <string name="type">"نوع"</string>
+    <string name="settings_vibration">"لرزش"</string>
+    <string name="switch_on_text">"روشن"</string>
+    <string name="switch_off_text">"خاموش"</string>
+    <string name="share">"اشتراک‌گذاری"</string>
+    <string name="computer">"رایانه"</string>
+    <string name="error_feature_not_available">"این ویدیو در این دستگاه دردسترس نیست."</string>
+    <string name="deleted_toast">"<ns0:g id="NAME">%1$s</ns0:g> حذف شد"</string>
+    <string name="send_mail">"ارسال رایانامه"</string>
+    <string name="copy_text">"کپی در بریده‌دان"</string>
+    <string name="toast_text_copied">"متن کپی شده"</string>
+    <string name="new_game">"جدید"</string>
+    <string name="undo">"واگرد"</string>
+    <string name="connection_error_message">"اتصال برقرار نیست"</string>
+    <string name="username">"نام"</string>
+    <string name="history">"سابقه"</string>
 </resources>
