--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,90 +22,83 @@
   ~ SOFTWARE.
   -->
 
-<resources>
+<resources xmlns:ns0="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Соедини пять точек</string>
     <string name="language">Русский</string>
-
-
     <string name="greetings">Привет, %1$s!</string>
-    <string name="android">Андроид</string>
-    <string name="how_to_title">Как играть</string>
-    <string name="how_to_text">\tБудьте первыми соединив пять точек в прямую линию горизонтально, вертикально или диагонально. Андроид играет синими точками, Вы играете красными точками. Красные и синие точки ставятся по очереди на пересечениях линий. Первый ход Ваш.\n\n\tПеретяните экран, чтобы передвинуть игровое поле.\n\tРастяните экран, чтобы увеличить или уменьшить размер клеток.\n\tИспользуйте меню, чтобы начать новую игру, отменить последний ход, посмотреть очки или информацию как играть.\n\tНажмите на кнопку \"Поиск\", чтобы спрятать/показать стрелочки вокруг точки последнего хода.</string>
-
     <string name="scores_title">Очки</string>
-    <string name="scores_no_internet">Нет доступа к интернету</string>
-    <string name="scores_number">№</string>
-    <string name="scores_name">Имя</string>
     <string name="scores_moves">Количество ходов</string>
-    <string name="scores_status">Статус</string>
     <string name="scores_won">выиграна</string>
     <string name="scores_lost">проиграна</string>
-
     <string name="end_win">Вы выиграли!</string>
     <string name="end_lose">Вы проиграли!</string>
-    <string name="end_new_game">Новая</string>
-    <string name="end_undo">Отменить</string>
-    <string name="end_move">%1$d ходов сделано за %2$s.</string>
-
-    <string name="scores_time">Время</string>
-    <string name="end_publish">Опубликовать</string>
-
-    <string name="scores_loading">Загрузка&#8230;</string>
-
     <string name="menu_single_player">Один игрок</string>
     <string name="menu_multi_player">Мультиплеер</string>
     <string name="menu_two_players">Два игрока</string>
     <string name="menu_local_network">Локальная Сеть</string>
     <string name="menu_online_game">Интернет</string>
-
-    <string name="settings_vibration">Вибрация</string>
-    <string name="settings_night_mode">Ночной режим</string>
-    <string name="settings_auto">"Автонастройка"</string>
-    <string name="settings_system">"Система"</string>
     <string name="settings_dots">"Точки"</string>
-    <string name="settings_reset">"Стереть все"</string>
     <string name="rate_this_app">Оценить приложение</string>
+    <string name="bluetooth_not_discoverable">"Сделать устройство видимым"</string>
+    <string name="bt_message_your_turn">Ваш ход, поставте точку…</string>
+    <string name="bt_message_opponents_turn">Ход соперника, подождите…</string>
+
+
+    <string name="how_to_text">\tБудьте первыми соединив пять точек в прямую линию горизонтально, вертикально или диагонально. Андроид играет синими точками, Вы играете красными точками. Красные и синие точки ставятся по очереди на пересечениях линий. Первый ход Ваш.\n\n\tПеретяните экран, чтобы передвинуть игровое поле.\n\tРастяните экран, чтобы увеличить или уменьшить размер клеток.\n\tИспользуйте меню, чтобы начать новую игру, отменить последний ход, посмотреть очки или информацию как играть.\n\tНажмите на кнопку \"Поиск\", чтобы спрятать/показать стрелочки вокруг точки последнего хода.</string>
+
 
     <string name="yes">"Да"</string>
     <string name="no">"Нет"</string>
     <string name="create">"Создать"</string>
-    <string name="delete">"Удалить"</string>
-    <string name="scan">"Поиск"</string>
-    <string name="searching">"Поиск…"</string>
-    <string name="device_info_default">"Неизвестно"</string>
-
-    <string name="switch_on_text">"ВКЛЮЧЕНО"</string>
-    <string name="switch_off_text">"ВЫКЛЮЧЕНО"</string>
-
-    <string name="bluetooth_not_discoverable">"Сделать устройство видимым"</string>
-    <string name="bluetooth_is_discoverable">"Виден другим Bluetooth-устройствам: %1$s"</string>
+    <string name="unknown">"Неизвестно"</string>
+    <string name="settings_system">"Система"</string>
+    <string name="disconnected">"Нет подключения"</string>
+    <string name="bluetooth">"Bluetooth"</string>
+    <string name="bluetooth_is_discoverable">"Виден другим Bluetooth-устройствам: <ns0:g id="DISCOVERABLE_TIME_PERIOD">%1$s</ns0:g>"</string>
     <string name="bluetooth_only_visible_to_paired_devices">"Доступно только для подключенных устройств"</string>
-    <string name="bt_is_disconnect_question">"Отключить \"%1$s\"?"</string>
-    <string name="bluetooth_connected">"Подключено"</string>
-    <string name="bluetooth_disconnected">"Отключено"</string>
-    <string name="bluetooth_connecting">"Подключение…"</string>
-    <string name="bluetooth_no_devices_found">"Устройства Bluetooth не найдены."</string>
-    <string name="bluetooth_connection_dialog_text">"Подключиться к устройству \"%1$s\"?"</string>
-    <string name="bluetooth_settings">"Bluetooth"</string>
-    <string name="bluetooth_connecting_error_message">"Не удалось подключиться к \"%1$s\"."</string>
+    <string name="is_disconnect_question">"Отключить <ns0:g id="DEVICE_NAME">%1$s</ns0:g>?"</string>
+    <string name="connection_dialog_text">"Подключиться к устройству \"<ns0:g id="DEVICE_NAME">%1$s</ns0:g>\"?"</string>
     <string name="cancel">"Отмена"</string>
     <string name="okay">"ОК"</string>
-    <string name="settings_label">"Настройки"</string>
-    <string name="apn_not_set">"Не задано"</string>
-    <string name="apn_name">"Имя:"</string>
-    <string name="apn_user">"Имя пользователя"</string>
+    <string name="time">"Время"</string>
+    <string name="connecting_error_message">"Не удалось подключиться к <ns0:g id="DEVICE_NAME">%1$s</ns0:g>."</string>
+    <string name="searching">"Поиск…"</string>
+    <string name="connect_failed">"Ошибка подключения. Повторите попытку."</string>
+    <string name="connected">"Подключен"</string>
+    <string name="scan">"Поиск"</string>
+    <string name="status">"Статус"</string>
+    <string name="search">"Поиск"</string>
+    <string name="search_no_results">"Ничего не найдено"</string>
+    <string name="settings_night_mode">"Ночной режим"</string>
+    <string name="name_not_set">"Не задано"</string>
+    <string name="name">"Имя"</string>
+    <string name="settings_delete_all">"Стереть все"</string>
+    <string name="progress_text">"Подождите…"</string>
+    <string name="help">"Справка"</string>
+    <string name="loading">"Загрузка…"</string>
     <string name="application_info_label">"О приложении"</string>
-    <string name="master_clear_progress_text">"Подождите…"</string>
-    <string name="version_text">"Версия %1$s"</string>
-    <string name="device_feedback">Отправить отзыв</string>
-    <string name="phone_language">"Язык"</string>
-    <string name="share">"Отправить"</string>
-    <string name="search_menu">"Поиск"</string>
-    <string name="search_settings_no_results">"Ничего не найдено"</string>
-    <string name="disabled_low_ram_device">"Функция недоступна на этом устройстве."</string>
-
-
-    <string name="bt_message_your_turn">Ваш ход, поставте точку…</string>
-    <string name="bt_message_opponents_turn">Ход соперника, подождите…</string>
+    <string name="version_text">"Версия <ns0:g id="VERSION_NUM">%1$s</ns0:g>"</string>
+    <string name="settings_language">"Языки"</string>
+    <string name="settings_auto">"Автоматически"</string>
+    <string name="settings">"Настройки"</string>
+    <string name="duration">"Период"</string>
+    <string name="connecting">"Подключение…"</string>
+    <string name="delete">"Удалить"</string>
+    <string name="type">"Тип"</string>
+    <string name="settings_vibration">"Вибросигнал"</string>
+    <string name="switch_on_text">"ВКЛЮЧЕНО"</string>
+    <string name="switch_off_text">"ВЫКЛЮЧЕНО"</string>
+    <string name="share">"Предоставить доступ"</string>
+    <string name="computer">"Компьютер"</string>
+    <string name="error_feature_not_available">"Функция недоступна на этом устройстве."</string>
+    <string name="deleted_toast">"Контакт <ns0:g id="NAME">%1$s</ns0:g> удален"</string>
+    <string name="send_mail">"Отправить письмо"</string>
+    <string name="copy_text">"Копировать в буфер обмена"</string>
+    <string name="toast_text_copied">"Текст скопирован"</string>
+    <string name="new_game">"Добавить"</string>
+    <string name="undo">"Отменить"</string>
+    <string name="connection_error_message">"Нет соединения"</string>
+    <string name="username">"Имя"</string>
+    <string name="history">"История"</string>
 
 </resources>
